--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.10.0",
+    "jest": "^29.5.0",
     "nodemon": "^3.0.2",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   }
